# ShinkaEvolve

./: .env.example  .gitignore  AGENTIC_REWRITE.md  AUDIT.md  AUDIT_LOGIC_WORKFLOW_20260603.md  AUDIT_VERIFICATION_20260529.md  CHANGELOG.md  CLAUDE.md  DESIGN_AUDIT_20260529.md  FIX_PLAN_20260529.md  FIX_PLAN_20260603.md  README.md  ROOT_CAUSE_AUDIT_20260603.md  TESTRUN_FINDINGS.md  pyproject.toml  taxonomy.md
.claude/skills/: shinka-convert  shinka-inspect  shinka-orchestrator  shinka-run  shinka-setup
.claude/workflows/: audit-evolution-logic.js  repo-cleanup.js  root-cause-survival-novelty.js
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: README.md  azure_default.yaml  orchestrator_run.default.json
docs/: FIX_PLAN_AUDIT_20260610.md  FIX_PLAN_DISCOVERY_GROUNDING_GAP_20260617.md  FIX_PLAN_RUN_POSTMORTEM_20260616.md
examples/circle_packing/: README.md
examples/cnot_grid_synth/: README.md  initial.py  run_evo.py
orchestrator/: NOTES.md  SKILL.md
orchestrator/harness/: journal.py  rollback_decision.py  run_detached.py  run_window.py  strategy_store.py  validate_strategy.py
orchestrator/scripts/: _azure.py  _common.py  archive_query.py  archive_record.py  cadence_policy.py  compute_reward.py  construct_mutation_prompt.py  deep_research.py  diagnostics.py  evaluate.py  island_brief.py  island_policy.py  meta_summarize.py  mutate.py  novelty_check.py  record_policy.py  repair_record.py  sample_parent.py  select_llm.py  spawn_island.py  stagnation_detector.py
orchestrator/strategy_history/: README.md
scripts/: test_agentic.py  test_azure.py  test_dr.py
shinka/: defaults.py  env.py  model_availability.py
skills/: shinka-orchestrator
tasks/: README.md
tests/: test_agent_client.py  test_agent_hooks.py  test_agent_tool_apply_patch.py  test_agent_tool_evaluate.py  test_agent_tool_query_db.py  test_agent_tool_read_file.py  test_agent_tool_web_search.py  test_agent_tools_context.py  test_background_model.py  test_bandit_persistence.py  test_database_no_api_keys.py  test_deep_research_meta.py  test_dr_client.py  test_error_fix_loop.py  test_launch_hydra_async.py  test_literature_grounded.py  test_llm_poll.py  test_llm_query_routing.py  test_llm_retry_constants.py  test_llm_tools.py  test_model_availability.py  test_model_resolver.py  test_openai_provider.py  test_packaging_release.py  test_research_grounding_schema.py  test_robust_runner.py  test_run_agent_proposal.py  test_shinka_models_cli.py  test_shinka_run_cli.py  test_utils_general.py  test_wrap_eval_error_traceback.py
(+117 files in other folders)
