[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shinka-evolve"
dynamic = ["version"]
description = "Automated Scientific Evolution"
authors = [
    {name = "Sakana AI (upstream)", email = "robert@sakana.ai"},
    {name = "dtlics"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = {Homepage = "https://github.com/dtlics/ShinkaEvolve", Repository = "https://github.com/dtlics/ShinkaEvolve", Issues = "https://github.com/dtlics/ShinkaEvolve/issues", Upstream = "https://github.com/SakanaAI/ShinkaEvolve"}
# Azure-only fork: non-Azure provider SDKs (anthropic, boto3/bedrock,
# google-genai) and the plotting/viz stack (seaborn, moviepy, adjustText) were
# dropped with the Azure-only prune. The orchestrator's outer loop is driven by
# Claude Code; the inner loop talks to Azure via the OpenAI SDK + openai-agents.
dependencies = [
    "openai",
    "openai-agents>=0.17.2",
    "numpy",
    "pandas",
    "requests",
    "pydantic",
    "python-dotenv",
    "instructor",
    "python-Levenshtein",
    "radon",
    "unidiff",
    "dill",
    "hydra-core==1.3.2",
    "matplotlib",
    "networkx",
    "scikit-learn",
    "aiofiles",
    "psutil",
    "httpx>=0.28"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "shinka.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["shinka*"]

[tool.setuptools.package-data]
shinka = [
    "configs/*.yaml",
    "configs/*/*.yaml",
    "embed/providers/*.csv",
    "llm/providers/*.csv",
]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "black",
    "isort",
    "flake8",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
# The orchestrator's offline suite (parity / improvements / smoke). The old
# framework test suite was removed with the Azure-only prune. ``tasks/`` may
# contain user ``evaluate.py`` files that aren't pytest targets.
testpaths = ["orchestrator/tests"]
markers = [
    "integration: live external/provider integration coverage",
    "requires_secrets: tests that need CI secrets or private credentials",
]
